# django-zodb

./: .gitignore  README.md  project.mk  pyproject.toml
django_zodb/: base.py  client.py  creation.py  cursor.py  dbapi.py  introspection.py  operations.py  root.py  schema.py  wrapper.py
django_zodb/base/: __init__.py  client.py  connection.py  features.py  introspection.py  operations.py  schema.py
django_zodb/management/commands/: dumpzodb.py  runzeo.py
test/: package-lock.json  package.json  requirements.txt
test/backend/settings/: base.py  dev.py
test/siteuser/migrations/: 0001_initial.py
